[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/category.gd" type="Script" id=1]

[node name="Category" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="Control" parent="."]
margin_right = 200.0
margin_bottom = 91.0

[node name="Button" type="Button" parent="VBoxContainer"]
margin_right = 199.0
margin_bottom = 91.0

[node name="NameLabel" type="Label" parent="VBoxContainer"]
margin_right = 200.0
margin_bottom = 50.0
text = "Name
"
align = 1
valign = 1

[node name="DifficultyLevel" type="ProgressBar" parent="VBoxContainer"]
margin_top = 67.0247
margin_right = 200.0
margin_bottom = 92.0247
max_value = 10.0
step = 1.0
value = 5.0
percent_visible = false

[node name="DifficultyLabel" type="Label" parent="VBoxContainer/DifficultyLevel"]
margin_top = -15.422
margin_right = 200.0
margin_bottom = -1.422
text = "Difficulty"
align = 1
valign = 1

[node name="Label" type="Label" parent="VBoxContainer/DifficultyLevel"]
margin_left = 84.5014
margin_top = 5.7158
margin_right = 113.501
margin_bottom = 19.7158
text = "0/10"

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_Button_pressed"]
